# mcp-companycam

./: .env.example  .gitignore  CLAUDE.md  README.md  claude_desktop_config.example.json  companycam_mcp_plan.md  companycam_mcp_server.py  package-lock.json  package.json  pyproject.toml  railway.toml
src/: client.ts  index.ts  server.ts
src/tools/: photos.ts  projects.ts  reference.ts
src/utils/: format.ts
